Please commission us

--- a/about.html
+++ b/about.html
@@ -69,5 +69,6 @@
         </article>
         <a href="https://ochame.neocities.org/bayanet/" target="_blank"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" alt="BayaNet ID" class="center rotate"></a>
     </main>
+    <img src="/images/decor/spin.gif" style="position: fixed; bottom: 0; left: 15px;">
 </body>
 </html>
