--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p>17/06/2023: Another layout change. Mother of God.</p>
             </footer>
             <a href="/rss.xml"><img src="/images/link-buttons/rss.gif" class="center" alt="RSS feed"></a>
-            <p class="center"><a href="https://blorbo.social/@yourdevilfriends" target="_blank" rel="me">Mastodon</a> · <a href="https://heckmaster.tumblr.com/" target="_blank">Tumblr</a></p>
+            <p class="center"><a href="https://blorbo.social/@yourdevilfriends" target="_blank" rel="me">Mastodon</a> · <a href="https://dnifreak.tumblr.com/" target="_blank">Tumblr</a></p>
         </article>
         <aside>
             <!--Transmasc Ring-->
