--- a/pixel1.html
+++ b/pixel1.html
@@ -97,5 +97,6 @@
         <h2>2020</h2>
         <a href="/images/art/pixel1/2020-sea-slug.png"><img src="/images/art/pixel1/2020-sea-slug.png"></a>
     </main>
+    <img src="/images/decor/gay-flag.gif" style="position: fixed; bottom: 0; right: 15px;">
 </body>
 </html>
