Forgot to stage these

--- a/art.html
+++ b/art.html
@@ -21,7 +21,7 @@
             <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <article>
-            <h2>Ask about commissions!<br>
+            <h2><a href="/commissions.html">Commissions are open!</a><br>
             When in a gallery, click each image to view the full picture.</h2>
             <!--Illustration-->
             <section class="illus">
