--- a/illus2.html
+++ b/illus2.html
@@ -26,7 +26,7 @@
             <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <section>
-            <p><a href="/illus3.html"><~</a> · <a href="/illus1.html">~></a></p>
+            <p><a href="/illus1.html">~></a></p>
         </section>
     </aside>
     <main>
