--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <!--Updates-->
             <h3 class="center rainbow">Update log</h3>
             <footer id="updates">
+                <p>03/07/2023: The worst ever <a href="/noodles.html">noodle review</a> just dropped. Joined RPG Maker Webring.</p>
                 <p>02/07/2023: There is now <a href="/commissions.html">commission information</a> available! Minor changes throughout the site.</p>
                 <p>30/06/2023: The <a href="/pixel1.html">Pixel art 1 gallery</a> is here, along with <a href="/scans.html">scans</a> and a new <a href="/noodles.html">instant noodle review</a>. Some changes in the <a href="/about.html">about page</a> too.</p>
                 <p>29/06/2023: New <a href="/fearandhunger.html">F&H log entries</a> and minor changes.</p>
@@ -84,8 +85,15 @@
                 <script type="text/javascript" src="https://feelingmachine.moe/alterring/onionring-variables.js"></script>
                 <script type="text/javascript" src="https://feelingmachine.moe/alterring/onionring-widget.js"></script>
             </div>
+            <!--RPGMaker Ring-->
+            <center>
+                <div id='RPGMaker'>
+                    <script type="text/javascript" src="https://ophanimkei.neocities.org/onionring/onionring-variables.js"></script>
+                    <script type="text/javascript" src="https://ophanimkei.neocities.org/onionring/onionring-widget.js"></script>
+                </div>
+            </center>
             <!--PSS Ring-->
-            <script src="https://ochame.neocities.org/ring/pssring.js"></script><webring-css style="display: block; max-width: 130px; margin: auto; margin-top: 10px;" site="https://yourdevilfriends.art/">
+            <script src="https://ochame.neocities.org/ring/pssring.js"></script><webring-css style="display: block; max-width: 130px; margin: auto; margin-top: 5px;" site="https://yourdevilfriends.art/">
         </aside>
     </main>
 </body>
