--- a/noodles.html
+++ b/noodles.html
@@ -26,6 +26,7 @@
                 <!--Table of contents-->
                 <h3>Jump to a review:</h3>
                 <ul>
+                    <li><a href="#koka-masala">Masala flavor by Koka</a></li>
                     <li><a href="#ajinomoto-miso">Oyakata Miso Ramen by Ajinomoto</a></li>
                     <li><a href="#knorr-chicken"><span lang="pt">Tentação de Galinha</span> by Knorr</a></li>
                     <li><a href="#kelly-katsuo">Katsuo Udon by Kelly Loves</a></li>
@@ -38,6 +39,10 @@
                     <li><a href="#nissin-demae">Demae Ramen Miso by Nissin</a></li>
                     <li><a href="#pg-teriyaki">Beef Teriyaki Flavor by <span lang="pt">Pingo Doce</span></a></li>
                 </ul>
+                <!---->
+                <h3 id="koka-masala">Masala flavor by Koka: 0.5/5</h3>
+                <p>Terrible. Simply terrible. We weren't expecting much, but we expected it to be at least edible. It was similar to <a href="#koka-curry">Koka's curry flavor</a> in the sense that it was very spicy, but other than that it was very nauseating to eat... We couldn't even finish it, we ended up throwing half of it away.</p>
+                <p>Not even worth the 90 cents we spent on it, holy shit.</p>
                 <!---->
                 <h3 id="ajinomoto-miso">Oyakata Miso Ramen by Ajinomoto: 3.5/5</h3>
                 <p>A very pleasant, mild flavor. However, it doesn't really taste like miso... namely because the amount of black pepper and ginger overshadows it. It's still tasty, with a very pleasant spicy kick to it, but we can't really get over it not tasting like miso.</p>
