--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
                     </div> 
                 </div>
                 <!--RPGMaker Ring-->
-                <div id='RPGMaker'>
-                    <script type="text/javascript" src="https://ophanimkei.neocities.org/onionring/onionring-variables.js"></script>
-                    <script type="text/javascript" src="https://ophanimkei.neocities.org/onionring/onionring-widget.js"></script>
-                </div> 
+                <center>
+                    <div id='RPGMaker'>
+                        <script type="text/javascript" src="https://ophanimkei.neocities.org/onionring/onionring-variables.js"></script>
+                        <script type="text/javascript" src="https://ophanimkei.neocities.org/onionring/onionring-widget.js"></script>
+                    </div> 
+                </center>
             </section>
             <section>
                 <!--PSS Ring-->
