Added Neocities mirror

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             <!--The site-->
             <h2>About <span class="rainbow">yourdevilfriends.art</span></h2>
             <p>This website was made because we bought a domain on a whim and figured we'd give it some use.</p>
-            <p>It's hosted on GitHub (Neocities mirror coming... somewhere in the future), entirely hand-coded and built in the simplest fucking way possible.</p>
+            <p>It's hosted on GitHub (<a href="https://yourdevilfriends.neocities.org/">Neocities mirror</a>), entirely hand-coded and built in the simplest fucking way possible.</p>
             <p>Made for fun and for the love of the indie Web, it's run by two <strong class="rainbow">Webmasters</strong> from the same <a href="https://morethanone.info/" target="_blank">system</a>.</p>
             <!--The Webmasters-->
             <h2>About the <span class="rainbow">Webmasters</span></h2>
