--- a/dreamie.html
+++ b/dreamie.html
@@ -101,7 +101,7 @@
                 <p>They proceeded to claim we said they should off themselves, something we didn't do either publicly or privately, and were dead-set on convincing us and others we had done so in a manner that came a bit too close to gaslighting for our tastes. Mind you, it didn't work, though we still made sure we hadn't said nothing of the sort.</p>
                 <p>These kinds of arguments could go on for a while. To be fair, dreamie was fun to poke fun of because of their over-reactions and honestly idiotic ramblings and because everyone and their grandmother was sick of their shit. Want an example? Well, here you go:</p>
                 <figure class="center">
-                    <video src="/etc/neocities-simulator.mp4" controls></video>
+                    <video src="/etc/neocities-simulator.mp4" type="video/mp4" controls></video>
                     <figcaption>Thank you <a href="https://feelingmachine.moe/" target="_blank">Neph</a> for the cinematic masterpiece</figcaption>
                 </figure>
                 <p>They also threw a tantrum over an alterhuman webring, calling its owner (who is psychotic) sanist for no good reason. No, we are not kidding:</p>
