--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <p>Despite that, we love to interact with others. Feel free to reach out!</p>
             <!--Elsewhere-->
             <h3>Find us elsewhere</h3>
-            <p>Some site where we are active.</p>
+            <p>Some sites where we are active.</p>
             <ul>
                 <li><a href="https://dnifreak.tumblr.com/" target="_blank">Reblog Tumblr</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art Tumblr</a></li>
                 <li><a href="https://blorbo.social/@yourdevilfriends" target="_blank" rel="me">Mastodon</a></li>
@@ -63,6 +63,7 @@
                 <li><a href="https://www.moderneopets.com/userlookup/402" target="_blank">Moderneopets</a> & <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">Virtu.Pet</a></li>
                 <li>We also have some 18+ accounts, but we're not going to link them here</li>
             </ul>
+            <p>Additionally, we also use Discord (yourdevilfriends) and <a href="https://escargot.chat/" target="_blank">MSN Messenger</a> (devils@escargot.chat). You can also <a href="mailto:heckmaster@protonmail.com">e-mail us</a>!</p>
             <!--Tamanotchi-->
             <a href="https://tamanotchi.world/4706c" target="_blank"><img src="https://tamanotchi.world/i2/4706" alt="It's tamaNOTchi! Click to feed!" style="float: right;"></a>
             <!--Status.Cafe-->
