--- a/galleries/pixelart2023.html
+++ b/galleries/pixelart2023.html
@@ -19,6 +19,8 @@
         <!--
         <a href="/images/art/pixel/"><img src="/images/art/pixel/"></a>
         -->
+        <a href="/images/art/pixel/2023-tama.gif"><img src="/images/art/pixel/2023-tama.gif"></a>
+        <a href="/images/art/pixel/2023-pc.png"><img src="/images/art/pixel/2023-pc.png"></a>
         <a href="/images/art/pixel/2023-tapeworm.gif"><img src="/images/art/pixel/2023-tapeworm.gif"></a>
         <a href="/images/art/pixel/2023-smoke.gif"><img src="/images/art/pixel/2023-smoke.gif"></a>
     </main>
