--- a/galleries/illustration2023.html
+++ b/galleries/illustration2023.html
@@ -14,6 +14,7 @@
         <!--
         <a href="/images/art/illustration/"><img src="/images/art/illustration/"></a>
         -->
+        <a href="/images/art/illustration/2023-opium.jpg"><img src="/images/art/illustration/2023-opium.jpg"></a>
         <a href="/images/art/illustration/2023-urine.png"><img src="/images/art/illustration/2023-urine.png"></a>
         <a href="/images/art/illustration/2023-penny.png"><img src="/images/art/illustration/2023-penny.png"></a>
         <a href="/images/art/illustration/2023-moomin-noa.png"><img src="/images/art/illustration/2023-moomin-noa.png"></a>
