--- a/about.html
+++ b/about.html
@@ -63,10 +63,17 @@
                 <li><a href="https://www.moderneopets.com/userlookup/402" target="_blank">Moderneopets</a> & <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">Virtu.Pet</a></li>
                 <li>We also have some 18+ accounts, but we're not going to link them here</li>
             </ul>
+            <!--Other projects-->
+            <h3>Other Web projects</h3>
+            <p class="center">
+                <a href="https://www.moderneopets.com/~14677"><img src="/images/buttons/mn_species.gif" alt="Moderneopets custom species guide"></a>
+                <br>
+                A guide for the Moderneopets site, hosted on a petpage there.
+            </p>
             <!--Tamanotchi-->
-            <a href="https://tamanotchi.world/4706c" target="_blank"><img src="https://tamanotchi.world/i2/4706" alt="It's tamaNOTchi! Click to feed!" style="float: right;"></a>
+            <a href="https://tamanotchi.world/4706c" target="_blank"><img src="https://tamanotchi.world/i2/4706" alt="It's tamaNOTchi! Click to feed!" style="float: right; margin-top: 10px;"></a>
             <!--Status.Cafe-->
-            <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=heckmaster" defer></script>
+            <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=devils" defer></script>
         </article>
         <!--Footer-->
         <footer>
