--- a/dreamie.html
+++ b/dreamie.html
@@ -156,7 +156,7 @@
         <footer>
             <marquee>Made with blood, sweat, tears and even some amount of effort.</marquee>
             <p><a href="/rss.xml">Follow updates with RSS!</a></p>
-            <p><a href="/">Index</a> · <a href="mailto:heckmaster@protonmail.com">Contact</a></p>
+            <p><a href="mailto:heckmaster@protonmail.com">Contact</a></p>
         </footer>
     </main>
 </body>
