--- a/galleries/pixelart2023.html
+++ b/galleries/pixelart2023.html
@@ -19,6 +19,24 @@
         <!--
         <a href="/images/art/pixel/"><img src="/images/art/pixel/"></a>
         -->
+        <a href="/images/art/pixel/2023-cream-tatsu.png"><img src="/images/art/pixel/2023-cream-tatsu.png"></a>
+        <a href="/images/art/pixel/2023-strawberry-motere.png"><img src="/images/art/pixel/2023-strawberry-motere.png"></a>
+        <a href="/images/art/pixel/2023-pirate-eyrie.png"><img src="/images/art/pixel/2023-pirate-eyrie.png"></a>
+        <a href="/images/art/pixel/2023-mint-xweetok.png"><img src="/images/art/pixel/2023-mint-xweetok.png"></a>
+        <a href="/images/art/pixel/2023-retrowave-tatsu.png"><img src="/images/art/pixel/2023-retrowave-tatsu.png"></a>
+        <a href="/images/art/pixel/2023-sketch-tatsu.png"><img src="/images/art/pixel/2023-sketch-tatsu.png"></a>
+        <a href="/images/art/pixel/2023-faerie-motere.png"><img src="/images/art/pixel/2023-faerie-motere.png"></a>
+        <a href="/images/art/pixel/2023-candy-tatsu.png"><img src="/images/art/pixel/2023-candy-tatsu.png"></a>
+        <a href="/images/art/pixel/2023-faerie-yurble.png"><img src="/images/art/pixel/2023-faerie-yurble.png"></a>
+        <a href="/images/art/pixel/2023-mutant-ruki.png"><img src="/images/art/pixel/2023-mutant-ruki.png"></a>
+        <a href="/images/art/pixel/2023-cloud-lulamu.png"><img src="/images/art/pixel/2023-cloud-lulamu.png"></a>
+        <a href="/images/art/pixel/2023-biscuit-yurble.png"><img src="/images/art/pixel/2023-biscuit-yurble.png"></a>
+        <a href="/images/art/pixel/2023-glowing-ginko.png"><img src="/images/art/pixel/2023-glowing-ginko.png"></a>
+        <a href="/images/art/pixel/2023-gingerbread-korbat.png"><img src="/images/art/pixel/2023-gingerbread-korbat.png"></a>
+        <a href="/images/art/pixel/2023-halloween-xweetok.png"><img src="/images/art/pixel/2023-halloween-xweetok.png"></a>
+        <a href="/images/art/pixel/2023-red-kitzen.png"><img src="/images/art/pixel/2023-red-kitzen.png"></a>
+        <a href="/images/art/pixel/2023-mutant-tatsu.png"><img src="/images/art/pixel/2023-mutant-tatsu.png"></a>
+        <a href="/images/art/pixel/2023-eventide-bori.png"><img src="/images/art/pixel/2023-eventide-bori.png"></a>
         <a href="/images/art/pixel/2023-tama.gif"><img src="/images/art/pixel/2023-tama.gif"></a>
         <a href="/images/art/pixel/2023-pc.png"><img src="/images/art/pixel/2023-pc.png"></a>
         <a href="/images/art/pixel/2023-tapeworm.gif"><img src="/images/art/pixel/2023-tapeworm.gif"></a>
