--- a/linkroll.html
+++ b/linkroll.html
@@ -44,6 +44,7 @@
         <article>
             <h1>Linkroll</h1>
             <p>Some of our favorite sites! We couldn't put every cool link we know of because we have bookmarked over 400 of those.</p>
+            <!--Friends-->
             <h3>Friends of the site</h3>
             <p class="center">
                 <a href="https://dokode.moe/"><img src="/images/buttons/dokodemo.gif" alt="dokodemo"></a>
@@ -53,6 +54,7 @@
                 <a href="https://ruuweb.web.fc2.com/"><img src="/images/buttons/ruuweb.png" alt="ruuweb"></a>
                 <br><a href="https://mortalsins.neocities.org/">mortalsins</a>
             </p>
+            <!--Lovely sites-->
             <h3>Lovely sites</h3>
             <p class="center">
                 <a href="https://heckscaper.com/"><img src="/images/buttons/heckscaper.gif" alt="heckscaper"></a>
@@ -71,6 +73,10 @@
                 <a href="http://allaboutfrogs.org/froglnd.shtml"><img src="/images/buttons/allaboutfrogs.gif" alt="frogland"></a>
                 <a href="https://dragonsroost.neocities.org/"><img src="/images/buttons/dragonsroost.png" alt="Dragon's Roost"></a>
                 <a href="https://rgbteahouse.neocities.org/"><img src="/images/buttons/rgbteahouse.jpg" alt="RGBTeahouse"></a>
+                <a href="https://incessantpain.neocities.org/"><img src="/images/buttons/incessantpain.gif" alt="incessantpain"></a>
+                <a href="https://bugsite.org/"><img src="/images/buttons/bugsite.png" alt="Bugsite"></a>
+                <a href="https://elucidatedvoyyd.neocities.org/rp-home"><img src="/images/buttons/robopon.gif" alt="Robopon Iceberg"></a>
+                <a href="https://playmoar.neocities.org/"><img src="/images/buttons/playmoar.gif" alt="playmoar"></a>
                 <br>
                 <a href="https://internetbasedghosts.neocities.org/">internetbasedghosts</a> ·
                 <a href="https://meowco.neocities.org/">meowco</a> ·
@@ -79,8 +85,52 @@
                 <a href="https://www.cicadamania.com/">Cicada Mania</a> ·
                 <a href="https://www.sinkdog.com/">Sinkdog Archive</a> ·
                 <a href="https://pluralrespect.neocities.org/">Plural Respect</a>
+                <br>
+                <a href="https://catland.distin.org/">Catland</a> ·
+                <a href="https://afterthetone.com/">After The Tone</a> ·
+                <a href="https://tcrf.net/The_Cutting_Room_Floor">Cutting Room Floor</a>
             </p>
-
+            <!--Interesting reads-->
+            <h3>Interesting reads</h3>
+            <ul>
+                <li><a href="https://suboptimalism.neocities.org/writings/yesterweb">What happened to Yesterweb?</a><br>
+                Investigation/case study of the end of the Yesterweb «movement» by <a href="https://suboptimalism.neocities.org/">suboptimalism</a>;</li>
+                <li><a href="https://gutterotica.com/">The Gutterotica Manifesto</a></li>
+                <li><a href="https://chartcarr.neocities.org/SecretBase">Toby Fox's Secret Base</a><br>
+                Translations of Toby Fox's monthly column on Weekly Famitsu by <a href="https://chartcarr.neocities.org/">chart</a>.</li>
+                <li><a href="https://whathappensnext.webcomic.ws/">What happens next</a><br>
+                Webcomic about murder and Internet culture.</li>
+            </ul>
+            <!--Videos-->
+            <h3>Videos, Youtubers, the like</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/@raocow">raocow on Youtube</a><br>
+                Old-school (since 2006) let's-player.</li>
+                <li><a href="https://www.youtube.com/@danooct1">danooct1 on Youtube</a><br>
+                Guy who showcases all sorts of malware.</li>
+                <li><a href="https://www.youtube.com/@parthenocarpySA">parthenocarpySA on Youtube</a><br>
+                AKA Cooking With Hoarders, the most dysfunctional cooking show you'll ever see.</li>
+                <li><a href="https://youtube.com/playlist?list=PLABqEYq6H3vpCmsmyUnHnfMOeAnjBdSNm">Chris Chan: A Comprehensive History</a><br>
+                Documentary series about Chris Chan. Potentially a huge waste of time.</li>
+                <li><a href="https://www.catsuka.com/">Catsuka</a><br>
+                Animation news website, primarily in French.</li>
+                <li><a href="https://twcclassics.com/">The Weather Channel Classics</a><br>
+                Archive of old TWC content.</li>
+            </ul>
+            <!--Archived sites-->
+            <h3>In memoriam</h3>
+            <p class="center">
+                <a href="https://web.archive.org/web/20071006161833/suta-raito.com/"><img src="/images/buttons/suta-raito.gif" alt="Suta-Raito"></a>
+                <a href="https://web.archive.org/web/20120507105220/http://www.arkeis.com/"><img src="/images/buttons/arkeis.gif" alt="Arkeis"></a>
+                <a href="https://web.archive.org/web/20060411130702/http://www.mewheart.com/eng/"><img src="/images/buttons/mewheart.gif" alt="MewHeart"></a>
+                <a href="https://archive.ph/rHLJl"><img src="/images/buttons/giffactory.gif" alt="Happy Galgomon GIF Factory"></a>
+                <a href="https://web.archive.org/web/20060707163058/http://www.onlinedigimon.com/site.php?goto=main"><img src="/images/buttons/onlinedigimon.gif" alt="Online Digimon"></a>
+                <a href="https://web.archive.org/web/20001027132339/http://www.manekinekoclub.com/"><img src="/images/buttons/manekinekoclub.gif" alt="Maneki Neko Club"></a>
+                <br>
+                <a href="https://web.archive.org/web/20140923060525/http://invisiblegames.net/">Invisible Games</a> ·
+                <a href="https://web.archive.org/web/20091020220020/http://geocities.com/TelevisionCity/Stage/7140/psyadventures.html">Psyadventures</a> ·
+                <a href="https://web.archive.org/web/20170901003557/http://www.patrickcrusade.org/">Open Your Mind</a>
+            </p>
         </article>
         <!--Footer-->
         <footer>
