--- a/linkroll.html
+++ b/linkroll.html
@@ -77,6 +77,10 @@
                 <a href="https://bugsite.org/"><img src="/images/buttons/bugsite.png" alt="Bugsite"></a>
                 <a href="https://elucidatedvoyyd.neocities.org/rp-home"><img src="/images/buttons/robopon.gif" alt="Robopon Iceberg"></a>
                 <a href="https://playmoar.neocities.org/"><img src="/images/buttons/playmoar.gif" alt="playmoar"></a>
+                <a href="https://www.hamhamparadise.com/"><img src="/images/buttons/hamhamparadise.gif" alt="Ham-Ham Paradise"></a>
+                <a href="https://desdeunsotano.neocities.org/"><img src="/images/buttons/desdeunsotano.gif" alt="Desde Un Sótano En Un Cerro"></a>
+                <a href="https://maia.crimew.gay/"><img src="/images/buttons/maia.png" alt="maia arson crimew"></a>
+                <a href="https://melankorin.net/"><img src="/images/buttons/melankorin.gif" alt="melankorin"></a>
                 <br>
                 <a href="https://internetbasedghosts.neocities.org/">internetbasedghosts</a> ·
                 <a href="https://meowco.neocities.org/">meowco</a> ·
@@ -89,6 +93,11 @@
                 <a href="https://catland.distin.org/">Catland</a> ·
                 <a href="https://afterthetone.com/">After The Tone</a> ·
                 <a href="https://tcrf.net/The_Cutting_Room_Floor">Cutting Room Floor</a>
+                <br>
+                <a href="https://mausoleum.me/">mausoleum.me</a> ·
+                <a href="https://bugguide.net/node/view/15740">BugGuide</a> ·
+                <a href="http://captainpackrat.com/">CaptainPackrat</a>
+                
             </p>
             <!--Interesting reads-->
             <h3>Interesting reads</h3>
@@ -100,6 +109,8 @@
                 Translations of Toby Fox's monthly column on Weekly Famitsu by <a href="https://chartcarr.neocities.org/">chart</a>.</li>
                 <li><a href="https://whathappensnext.webcomic.ws/">What happens next</a><br>
                 Webcomic about murder and Internet culture.</li>
+                <li><a href="http://arquivopessoa.net/">Arquivo Pessoa</a><br>
+                Archive of Fernando Pessoa's works, primarily in Portuguese.</li>
             </ul>
             <!--Videos-->
             <h3>Videos, Youtubers, the like</h3>
@@ -116,6 +127,8 @@
                 Animation news website, primarily in French.</li>
                 <li><a href="https://twcclassics.com/">The Weather Channel Classics</a><br>
                 Archive of old TWC content.</li>
+                <li><a href="https://petittube.com/">Petit Tube</a><br>
+                Find Youtube videos with little to no views.</li>
             </ul>
             <!--Archived sites-->
             <h3>In memoriam</h3>
@@ -130,6 +143,9 @@
                 <a href="https://web.archive.org/web/20140923060525/http://invisiblegames.net/">Invisible Games</a> ·
                 <a href="https://web.archive.org/web/20091020220020/http://geocities.com/TelevisionCity/Stage/7140/psyadventures.html">Psyadventures</a> ·
                 <a href="https://web.archive.org/web/20170901003557/http://www.patrickcrusade.org/">Open Your Mind</a>
+                <br>
+                <a href="https://web.archive.org/web/20030409155408/http://disenchantedforest.com:80/code/">Multiple Code</a> ·
+                <a href="https://web.archive.org/web/20090803150523/http://geocities.com/MissFarnaby/contents.html">Miss Farnaby</a>
             </p>
         </article>
         <!--Footer-->
