--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <a href="/scans.html">Scans</a>
                     <a href="/linkroll.html">Linkroll</a>
                     <a href="/shrines.html">Shrines</a>
+                    <a href="/tamagotchi.html">Tamagotchi graveyard</a>
                 </div>
             </div>
             <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
