--- a/tamagotchi.html
+++ b/tamagotchi.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <title>Title</title>
+    <title>tamagotchi graveyard</title>
+    <style>
+        section {
+           display: inline-block;
+           vertical-align: top;
+           height: 200px;
+           width: 190px;
+           padding-top: 10px;
+           border: 1px solid #000;
+           text-align: center;
+           overflow: auto;
+        }
+    </style>
 </head>
 <body>
     <main>
@@ -43,8 +55,13 @@
         </nav>
         <!--Main content-->
         <article>
-            <h1></h1>
-            <p></p>
+            <h1>Tamagotchi graveyard</h1>
+            <p>I'll never forget you...</p>
+            <section>
+                <img src="/images/tamagotchi/mametchi.png" alt="Mametchi">
+                <h3>Adult Baby</h3>
+                <p>04/06/2023-18/06/2023</p>
+            </section>
         </article>
         <!--Footer-->
         <footer>
