Link to latest Web project

--- a/about.html
+++ b/about.html
@@ -59,7 +59,6 @@
             <p>Some sites where we are active.</p>
             <ul>
                 <li><a href="https://insectus.tumblr.com/" target="_blank">Reblog Tumblr</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art Tumblr</a></li>
-                <li><a href="https://blorbo.social/@yourdevilfriends" target="_blank" rel="me">Mastodon</a></li>
                 <li><a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum</a></li>
                 <li><a href="https://www.moderneopets.com/userlookup/402" target="_blank">Moderneopets</a> & <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">Virtu.Pet</a></li>
                 <li>We also have some 18+ accounts, but we're not going to link them here</li>
@@ -67,6 +66,10 @@
             <!--Other projects-->
             <h3>Other Web projects</h3>
             <p class="center">
+                <a href="https://for-normal-people.neocities.org/"><img src="/images/buttons/for-normal-people.png" alt="for normal people"></a>
+                <br>
+                Hub for things related to our dead dove OCs.
+                <br><br>
                 <a href="https://www.moderneopets.com/~14677"><img src="/images/buttons/mn_species.gif" alt="Moderneopets custom species guide"></a>
                 <br>
                 A guide for the Moderneopets site, hosted on a petpage there.
