--- a/scans.html
+++ b/scans.html
@@ -26,7 +26,7 @@
                 <button>Written works</button>
                 <div class="link-list">
                     <a href="/articles.html">Articles</a>
-                    <a href="/fungerlog.html">F&H log</a>
+                    <a href="/poems.html">Poems</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -46,7 +46,6 @@
             <h1>Scans</h1>
             <p>Select category.</p>
             <ul>
-                <li><a href="/galleries/covers.html">Covers</a></li>
                 <li><a href="/galleries/pins.html">Pins</a></li>
             </ul>
         </article>
