--- a/tamagotchi.html
+++ b/tamagotchi.html
@@ -10,11 +10,16 @@
            display: inline-block;
            vertical-align: top;
            height: 200px;
-           width: 190px;
+           max-width: 48.5%;
            padding-top: 10px;
            border: 1px solid #000;
            text-align: center;
            overflow: auto;
+        }
+
+        section img {
+            image-rendering: pixelated;
+            height: 118px;
         }
     </style>
 </head>
@@ -38,7 +43,7 @@
                 <button>Written works</button>
                 <div class="link-list">
                     <a href="/articles.html">Articles</a>
-                    <a href="/fungerlog.html">F&H log</a>
+                    <a href="/poems.html">Poems</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -58,9 +63,15 @@
             <h1>Tamagotchi graveyard</h1>
             <p>I'll never forget you...</p>
             <section>
+                <img src="/images/tamagotchi/marutchi.png" alt="Marutchi">
+                <h3>Jesus</h3>
+                <p>18/07/2023-20/07/2023</p>
+            </section>
+            <!---->
+            <section>
                 <img src="/images/tamagotchi/mametchi.png" alt="Mametchi">
                 <h3>Adult Baby</h3>
-                <p>04/06/2023-18/06/2023</p>
+                <p>04/07/2023-18/07/2023</p>
             </section>
         </article>
         <!--Footer-->
