--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 <button>Written works</button>
                 <div class="link-list">
                     <a href="/articles.html">Articles</a>
-                    <a href="/fungerlog.html">F&H log</a>
+                    <a href="/poems.html">Poems</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -58,7 +58,7 @@
             <h3>Find us elsewhere</h3>
             <p>Some sites where we are active.</p>
             <ul>
-                <li><a href="https://insectus.tumblr.com/" target="_blank">Reblog Tumblr</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art Tumblr</a></li>
+                <li><a href="https://mikumustdie.tumblr.com/" target="_blank">Reblog Tumblr</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art Tumblr</a></li>
                 <li><a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum</a></li>
                 <li><a href="https://www.moderneopets.com/userlookup/402" target="_blank">Moderneopets</a> & <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">Virtu.Pet</a></li>
                 <li>We also have some 18+ accounts, but we're not going to link them here</li>
