--- a/freebies.html
+++ b/freebies.html
@@ -26,7 +26,7 @@
                 <button>Written works</button>
                 <div class="link-list">
                     <a href="/articles.html">Articles</a>
-                    <a href="/fungerlog.html">F&H log</a>
+                    <a href="/poems.html">Poems</a>
                 </div>
             </div>
             <div class="dropdown">
