--- a/shrines.html
+++ b/shrines.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <title>404 not found</title>
+    <title>Title</title>
 </head>
 <body>
     <main>
@@ -43,8 +43,11 @@
         </nav>
         <!--Main content-->
         <article>
-            <h1>404 Not found</h1>
-            <p><strong>We're working on it!!!!</strong></p>
+            <h1>Shrines</h1>
+            <p>Like most people, we enjoy a good piece of media. Here are pages dedicated to some of our favorites.</p>
+            <ul>
+                <li><a href="/funger.html">Fear and Hunger</a></li>
+            </ul>
         </article>
         <!--Footer-->
         <footer>
