--- a/galleries/illustration2022.html
+++ b/galleries/illustration2022.html
@@ -14,6 +14,8 @@
         <!--
         <a href="/images/art/illustration/"><img src="/images/art/illustration/"></a>
         -->
+        <a href="/images/art/illustration/2022-bat-guy.png"><img src="/images/art/illustration/2022-bat-guy.png"></a>
+        <a href="/images/art/illustration/2022-youtube.jpg"><img src="/images/art/illustration/2022-youtube.jpg"></a>
         <a href="/images/art/illustration/2022-yes.png"><img src="/images/art/illustration/2022-yes.png"></a>
         <a href="/images/art/illustration/2022-sanrio-hotel-2.png"><img src="/images/art/illustration/2022-sanrio-hotel-2.png"></a>
         <a href="/images/art/illustration/2022-sanrio-hotel-1.png"><img src="/images/art/illustration/2022-sanrio-hotel-1.png"></a>
@@ -48,7 +50,7 @@
         <a href="/images/art/illustration/2022-lovely-size.png"><img src="/images/art/illustration/2022-lovely-size.png"></a>
         <a href="/images/art/illustration/2022-flustered.png"><img src="/images/art/illustration/2022-flustered.png"></a>
         <a href="/images/art/illustration/2022-erro.png"><img src="/images/art/illustration/2022-erro.png"></a>
-        <a href="/images/art/illustration/2022-creep.png"><img src="/images/art/illustration/2022-creep.png"></a>
+        <a href="/images/art/illustration/2022-crossing-friends.png"><img src="/images/art/illustration/2022-crossing-friends.png"></a>
         <a href="/images/art/illustration/2022-cartoon-network.png"><img src="/images/art/illustration/2022-cartoon-network.png"></a>
         <a href="/images/art/illustration/2022-sketch.png"><img src="/images/art/illustration/2022-sketch.png"></a>
         <a href="/images/art/illustration/2022-a-sunset.png"><img src="/images/art/illustration/2022-a-sunset.png"></a>
@@ -88,6 +90,7 @@
         <a href="/images/art/illustration/2022-memoru.jpg"><img src="/images/art/illustration/2022-memoru.jpg"></a>
         <a href="/images/art/illustration/2022-minecraft-bee.jpg"><img src="/images/art/illustration/2022-minecraft-bee.jpg"></a>
         <a href="/images/art/illustration/2022-xenia.jpg"><img src="/images/art/illustration/2022-xenia.jpg"></a>
+        <a href="/images/art/illustration/2022-duh-rama.png"><img src="/images/art/illustration/2022-duh-rama.png"></a>
     </main>
 </body>
 </html>
