--- a/galleries/pixelart2022.html
+++ b/galleries/pixelart2022.html
@@ -19,6 +19,7 @@
         <!--
         <a href="/images/art/pixel/"><img src="/images/art/pixel/"></a>
         -->
+        <a href="/images/art/pixel/2022-pitt.png"><img src="/images/art/pixel/2022-pitt.png"></a>
         <a href="/images/art/pixel/2022-angel.png"><img src="/images/art/pixel/2022-angel.png"></a>
         <a href="/images/art/pixel/2022-memoru.png"><img src="/images/art/pixel/2022-memoru.png"></a>
         <a href="/images/art/pixel/2022-haldia.png"><img src="/images/art/pixel/2022-haldia.png"></a>
