--- a/freebies.html
+++ b/freebies.html
@@ -94,7 +94,8 @@
             <img src="/images/freebies/buttons/jesus.png">
             <img src="/images/freebies/buttons/mask-now.png">
             <h3>Buttons we made for others</h3>
-            <a href="https://redeviated-edael-tb.neocities.org/" target="_blank"><img src="/images/freebies/buttons/redeviated-edael-tb.gif"></a>
+            <a href="https://owly.fans/"><img src="/images/buttons/owlyfans.png" alt="owlyfans"></a>
+            <a href="https://redeviated-edael-tb.neocities.org/" target="_blank"><img src="/images/buttons/redeviated-edael-tb.gif" alt="redeviated-edael-tb"></a>
             <!--Badges-->
             <h2 id="badges">Badges</h2>
             <img src="/images/freebies/badges/schizophrenic.gif">
