--- a/linkroll.html
+++ b/linkroll.html
@@ -53,6 +53,7 @@
                 <a href="https://feelingmachine.moe/"><img src="/images/buttons/feelingmachine.gif" alt="feelingmachine"></a>
                 <a href="https://aiston.scungled.gay/"><img src="/images/buttons/aiston.gif" alt="aiston"></a>
                 <a href="https://ruuweb.web.fc2.com/"><img src="/images/buttons/ruuweb.png" alt="ruuweb"></a>
+                <a href="https://owly.fans/"><img src="/images/buttons/owlyfans.png" alt="owlyfans"></a>
                 <br><a href="https://mortalsins.neocities.org/">mortalsins</a>
             </p>
             <!--Lovely sites-->
@@ -82,6 +83,10 @@
                 <a href="https://desdeunsotano.neocities.org/"><img src="/images/buttons/desdeunsotano.gif" alt="Desde Un Sótano En Un Cerro"></a>
                 <a href="https://maia.crimew.gay/"><img src="/images/buttons/maia.png" alt="maia arson crimew"></a>
                 <a href="https://melankorin.net/"><img src="/images/buttons/melankorin.gif" alt="melankorin"></a>
+                <a href="https://redeviated-edael-tb.neocities.org/"><img src="/images/buttons/redeviated-edael-tb.gif" alt="redeviated-edael-tb"></a>
+                <a href="https://dreemurr.neocities.org/"><img src="/images/buttons/dreemurr.gif" alt="dreemurr"></a>
+                <a href="https://amriel.neocities.org/"><img src="/images/buttons/amriel.png" alt="amriel"></a>
+                <a href="https://vinizinho.net/"><img src="/images/buttons/vinizinho.png" alt="the vinizone"></a>
                 <br>
                 <a href="https://internetbasedghosts.neocities.org/">internetbasedghosts</a> ·
                 <a href="https://meowco.neocities.org/">meowco</a> ·
