--- a/shrines.html
+++ b/shrines.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <title>Title</title>
+    <title>shrines</title>
 </head>
 <body>
     <main>
