--- a/hatred.html
+++ b/hatred.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <title>articles</title>
+    <title>unordered list of things we hate</title>
 </head>
 <body>
     <main>
@@ -43,14 +43,35 @@
         </nav>
         <!--Main content-->
         <article>
-            <h1>Articles</h1>
+            <h1>Unordered list of things we hate</h1>
+            <p>Pettiness keeps us young, which is why everyone confuses us for a teenager. Do us a favor and don't take these too seriously.</p>
             <ul>
-                <li><a href="/hatred.html">Unordered list of things we hate</a><br>
-                Rather petty... Nobody cares about this one.</li>
-                <li><a href="/dreamie.html">That one Neocities user</a><br>
-                A retrospective on the bizarre dreamie drama (AKA the great Neocities war of 2022).</li>
-                <li><a href="/accessibility.html">Tips and tricks for Web accessibility</a><br>
-                Advice on how to make a site more accessible. Recommended for Webmasters who already have a decent grasp of HTML and CSS.</li>
+                <li>Minors on social media;</li>
+                <ul>
+                    <li>Especially the puritan/«anti»/cares-about-what-cartoons-adults-jerk-off-to types;</li>
+                    <li>Bonus points if they make Youtube commentary videos with rantsonas and speedpaints in the background;</li>
+                </ul>
+                <li>People above 20 who care about things that don't hurt anyone;</li>
+                <li>DC and Marvel;</li>
+                <ul>
+                    <li>And their fanboys, can you guys just read better comic books or something;</li>
+                    <li>DC is kinda tolerable because Batman is kind of an interesting character and has a few good comics.</li>
+                    <li>Loosely related, but if you are into comicsgate you are insufferable;</li>
+                </ul>
+                <li>Breadtube streamers;</li>
+                <ul>
+                    <li>There are a few alright ones, but the most well-known are extremely obnoxious;</li>
+                    <li>Seriously, Keffals, we get that you don't like Kiwi Farms, move the fuck on;</li>
+                    <li>I guess at least she proves that trans women are women, considering she's annoying as fuck (#sexism).</li>
+                </ul>
+                <li>Far-right politics;</li>
+                <ul>
+                    <li>Most conservatives are probably alright, but this loud minority just spoils the broth;</li>
+                </ul>
+                <li>Movies/shows without subtitles;</li>
+                <li>People who hate wasps;</li>
+                <li>God Himself;</li>
+                <li>Copyright laws.</li>
             </ul>
         </article>
         <!--Footer-->
