New art and hate

--- a/hatred.html
+++ b/hatred.html
@@ -46,6 +46,7 @@
             <h1>Unordered list of things we hate</h1>
             <p>Pettiness keeps us young, which is why everyone confuses us for a teenager. Do us a favor and don't take these too seriously.</p>
             <ul>
+                <li>Webcore and Webcore-likers.</li>
                 <li>Minors on social media;</li>
                 <ul>
                     <li>Especially the puritan/«anti»/cares-about-what-cartoons-adults-jerk-off-to types;</li>
