--- a/tamagotchi.html
+++ b/tamagotchi.html
@@ -62,6 +62,7 @@
         <article>
             <h1>Tamagotchi graveyard</h1>
             <p>I'll never forget you...</p>
+            <p>Graphics are official Tamagotchi artwork.</p>
             <section>
                 <img src="/images/tamagotchi/marutchi.png" alt="Marutchi">
                 <h3>Jesus</h3>
